<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_MainAxisInterface_Ctrl" Id="{888e1d24-5aab-45f3-9fa6-40d0c2c2f8e0}">
    <Declaration><![CDATA[TYPE ST_MainAxisInterface_Ctrl :
STRUCT
	bReset					:BOOL;						// rising trig will reset if any fault is active
	
	bEnable					:BOOL;						// set to give power to motor
	bStartRun				:BOOL;						// set to start motor in slow run
	fJogVelocity			:LREAL;						// selected speed for slow run, if = 0 then use default vel
	nJogAcceleration		:INT;						// Acceleration in Local mode
	
	// Cutoff and Speedgain
	fCutoffValue			:ARRAY[0..31] OF LREAL;		// Cutoff for each DriveGroup (equals the web number )
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>