<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_Server" Id="{439e4bf4-47a6-4224-8cfa-8c38d3319dcb}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Server
VAR_IN_OUT
	hServer			: T_HSERVER;(* Server connection handle *)
END_VAR
VAR_INPUT
	nServer_Id		: INT;
	sSrvNetID		: T_AmsNetID	:= '';(* TwinCAT TCP/IP server network address *)
	bEnable			: BOOL 			:= FALSE;(* TRUE => Enable server data exchange, FALSE => Disable *)
	bLog			: BOOL 			:= FALSE;(* TRUE => Enable log message output, FALSE => Disable *)
	sPrefix			: STRING 		:= 'SERVER::';(* Log message description string (allows the identification of log message source) *)
END_VAR
VAR_OUTPUT
	eState			: E_SocketConnectionState := eSOCKET_DISCONNECTED;(* TCP/IP connection state *)
END_VAR
VAR
	fbApplication 	: FB_ServerApplication;(* Server application control function block *)
	fbConnection	: FB_ServerConnection;(* Server data exchange control function block *)
	fbTx 			: FB_FrameFifo;(* Tx fifo *)
	fbRx 			: FB_FrameFifo;(* Rx fifo *)
	fbLog			: FB_LogFifo;(* Log/debug/error fifo *)
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*-------------------------- Trigger data exchange -----------------------------------------------*)
fbConnection( 	hServer := hServer, sSrvNetID := sSrvNetID, 
				fbRx := fbRx, fbTx := fbTx, fbLog := fbLog, 
				bEnable := bEnable, bLog := bLog, sPrefix := sPrefix, eState=>eState );
	
IF fbConnection.eState = eSOCKET_CONNECTED THEN(* Connection established *)
	aTcpPuff[nServer_Id].Conected := TRUE;
	aTcpPuff[nServer_Id].Ip_Adresss := fbConnection.sIpAdress;
	fbApplication( fbTx := fbTx, fbRx := fbRx, fbLog := fbLog, nServer_Id := nServer_Id );
ELSE	
	aTcpPuff[nServer_Id].Ip_Adresss := '';
	aTcpPuff[nServer_Id].PecomTNR 	:= 0;
	aTcpPuff[nServer_Id].Conected 	:= FALSE;
END_IF
 ]]></ST>
    </Implementation>
    <LineIds Name="FB_Server">
      <LineId Id="3" Count="5" />
      <LineId Id="34" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="82" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>